# sc2_nbdl

./: .dockerignore  CMakeLists.txt  README.md  cppdock.json  index.html  sc2_nbdl.web_app.js  sc2_nbdl.web_app.wasm
include/sc2_nbdl/: system_message.hpp
include/sc2_nbdl/server/: connection.hpp  context.hpp  serializer.hpp  server.hpp
include/sc2_nbdl/web/: context.hpp  route.hpp
include/sc2_nbdl/web/view/: main.hpp
server/: CMakeLists.txt  main.cpp
web_app/: CMakeLists.txt  main.cpp
web_app/www/: index.html
